divjoy-template/src/original/css/partners.module.css
.container {
    width: 100%;
    display: flex;
    overflow: auto;
    min-height: 100vh;
    /*align-items: center;*/
    flex-direction: column;
    /* added 3 below for resizing */
    flex-wrap: wrap; /* Wrap items when the container width is exceeded */
    justify-content: space-between; /* Distribute items evenly along the main axis */
    align-items: flex-start;
  }
  .coffee-chats-applicant6 {
    width: 100%;
    height: 1288px;
    display: flex;
    overflow: hidden;
    position: relative;
    align-items: flex-start;
    flex-shrink: 0;
    background-color: rgba(243, 247, 255, 1);
    /*background-color: #191970; /*CHANGED THIS*/
    background-color: rgba(44, 128, 255, 1);
  }
  .MainBanner {
    top: 24px;
    left: 180px;
    width: 1100px;
    height: 322.8241882324219px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
  .BannerRectangle {
    width: 1000px;
    height: auto;
    position: absolute;
    box-shadow: 2px 4px 7px 0px rgba(0, 0, 0, 0.25) ;
    border-radius: 20px;
  }
  .TopLogoStyle {
    width: auto;
    height: auto;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    z-index: 1;
  }
  .buttons {
    gap: 10px;
    top: 136px;
    left: 698px;
    width: 213.33731079101562px;
    height: 49px;
    display: flex;
    padding: 10px 7px;
    position: relative;
    box-sizing: content-box;
    align-items: center;
    flex-shrink: 0;
    border-color: rgba(44, 128, 255, 1);
    border-style: solid;
    border-width: 2px;
    border-radius: 5px;
    flex-direction: column;
    background-color: rgba(255, 255, 255, 1);
    transition: transform 0.3s;
  }
  .buttons:hover {
    transform: scale(1.05);
  }
  .text {
    color: rgba(44, 128, 255, 1);
    height: auto;
    font-size: 24px;
    font-style: Bold;
    text-align: center;
    font-family: Inter;
    font-weight: 700;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
  .group13781 {
    top: 1044.859619140625px;
    left: 567.068359375px;
    width: 306.8630065917969px;
    height: 435.0878601074219px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
  .rectangle1603261 {
    top: 0px;
    left: 0px;
    width: 307px;
    height: 435px;
    position: absolute;
    box-shadow: 2px 4px 7px 0px rgba(0, 0, 0, 0.25) ;
  }
  .e5bb7c0a49694a88aee2a6bb3bb1bcd11 {
    top: 6.5755696296691895px;
    left: 7.671278476715088px;
    width: 290px;
    height: 292px;
    position: absolute;
    border-radius: 17px 17px 17px 0;
  }
  .text002 {
    top: 302.95068359375px;
    left: 13.045845985412598px;
    color: rgba(39, 40, 41, 1);
    width: 236px;
    height: auto;
    position: absolute;
    font-size: 18px;
    font-style: Semi Bold;
    text-align: left;
    font-family: Inter;
    font-weight: 700;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
  .text004 {
    top: 336.28985595703125px;
    left: 13.045845985412598px;
    color: rgba(39, 40, 41, 1);
    width: 277px;
    height: auto;
    position: absolute;
    font-size: 10px;
    font-style: Regular;
    text-align: left;
    font-family: Inter;
    font-weight: 400;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
  .group13782 {
    top: 1043.40966796875px;
    left: 916.13720703125px;
    width: 306.8630065917969px;
    height: 435.0878601074219px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
  .rectangle1603262 {
    top: 0px;
    left: 0px;
    width: 307px;
    height: 435px;
    position: absolute;
    box-shadow: 2px 4px 7px 0px rgba(0, 0, 0, 0.25) ;
  }
  .e5bb7c0a49694a88aee2a6bb3bb1bcd1101 {
    top: 6.5755696296691895px;
    left: 7.671278476715088px;
    width: 290px;
    height: 292px;
    position: absolute;
    border-radius: 17px 17px 17px 0;
  }
  .text013 {
    top: 302.95068359375px;
    left: 13.045845031738281px;
    color: rgba(39, 40, 41, 1);
    width: 236px;
    height: auto;
    position: absolute;
    font-size: 18px;
    font-style: Semi Bold;
    text-align: left;
    font-family: Inter;
    font-weight: 700;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
  .text015 {
    top: 336.2898254394531px;
    left: 13.045845031738281px;
    color: rgba(39, 40, 41, 1);
    width: 277px;
    height: auto;
    position: absolute;
    font-size: 10px;
    font-style: Regular;
    text-align: left;
    font-family: Inter;
    font-weight: 400;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
  .group13783 {
    top: 1481.53173828125px;
    left: 218px;
    width: 306.8630065917969px;
    height: 435.0878601074219px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
  .rectangle1603263 {
    top: 0px;
    left: 0px;
    width: 307px;
    height: 435px;
    position: absolute;
    box-shadow: 2px 4px 7px 0px rgba(0, 0, 0, 0.25) ;
  }
  .e5bb7c0a49694a88aee2a6bb3bb1bcd1102 {
    top: 6.5755696296691895px;
    left: 7.671278476715088px;
    width: 290px;
    height: 292px;
    position: absolute;
    border-radius: 17px 17px 17px 0;
  }
  .text024 {
    top: 302.95068359375px;
    left: 13.045845985412598px;
    color: rgba(39, 40, 41, 1);
    width: 236px;
    height: auto;
    position: absolute;
    font-size: 18px;
    font-style: Semi Bold;
    text-align: left;
    font-family: Inter;
    font-weight: 700;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
/* ... */

